--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GPP</title>
   
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏗️</text></svg>">
+  <link rel="icon" type="image/png" href="icone.png">
 
   <script src="https://cdn.tailwindcss.com/3.4.17"></script>
   <script src="https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
@@ -208,7 +208,7 @@
   <div id="app">
    <header class="bg-slate-800/50 border-b border-slate-700 p-4 flex justify-between items-center">
     <div class="flex items-center gap-4">
-     <img id="company-logo" src="https://placehold.co/100x100/6366f1/ffffff?text=LOGO" alt="Logo da Empresa" class="w-14 h-14 rounded-lg object-cover bg-slate-800 border border-slate-700">
+     <img id="company-logo" src="logo.png" alt="Logo" class="w-14 h-14 rounded-lg object-cover bg-slate-800 border border-slate-700">
      
      <div>
       <h1 id="plan-title" class="text-2xl font-bold bg-gradient-to-r from-indigo-400 to-purple-400 bg-clip-text text-transparent">GPP</h1>
