--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   
   <link rel="icon" type="image/png" href="icone.png">
 
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <script src="https://cdn.tailwindcss.com/3.4.17"></script>
   <script src="https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
@@ -729,3 +731,4 @@
   </script>
  </body>
 </html>
+
