Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GPP</title>
   
-  <link rel="icon" type="image/png" href="icone.png">
-
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <link rel="icon" type="image/png" href="icone.png?v=1.1">
+  
   <script src="https://cdn.tailwindcss.com/3.4.17"></script>
   <script src="https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
@@ -731,4 +729,5 @@
   </script>
  </body>
 </html>
+
 
